--- a/api/templates/spotify-dark.html.j2
+++ b/api/templates/spotify-dark.html.j2
@@ -32,7 +32,7 @@
                 }
 
                 .song {
-                    color: #f7f7f7;
+                    color: #5ce1e6;
                     overflow:hidden;
                     margin-top: 3px;
                     font-size: 24px;
@@ -42,7 +42,7 @@
                 }
 
                 .artist {
-                    color: #9f9f9f;
+                    color: #5ce1e6;
                     font-size: 20px;
                     margin-top: 4px;
                     text-align: center;
@@ -68,7 +68,7 @@
                     bottom: 1px;
                     height: 3px;
                     position: absolute;
-                    background: #1DB954cc;
+                    background: #5ce1e6;
                     animation: sound 0ms -800ms linear infinite alternate;
                 }
                 
