--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -31,7 +31,7 @@
                 }
 
                 .song {
-                    color: #666;
+                    color: #5ce1e6;
                     overflow:hidden;
                     margin-top: 3px;
                     font-size: 24px;
@@ -41,7 +41,7 @@
                 }
 
                 .artist {
-                    color: #b3b3b3;
+                    color: #5ce1e6;
                     font-size: 20px;
                     margin-top: 4px;
                     text-align: center;
@@ -67,7 +67,7 @@
                     bottom: 1px;
                     height: 3px;
                     position: absolute;
-                    background: #1DB954cc;
+                    background: #5ce1e6;
                     animation: sound 0ms -800ms linear infinite alternate;
                 }
                 
